@@ -6,6 +6,8 @@ apt (0.9.8~exp1) UNRELEASED; urgency=low
   
   [ Daniel Hartwig ]
   * Clarify units of Acquire::http::Dl-Limit (closes: #705445)
+  * Show a error message if {,dist-}upgrade is used with additional
+    arguments (closes: #705510)
 
   [ Michael Vogt ]
   * lp:~mvo/apt/webserver-simulate-broken-with-fix346386:
